--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,18 +75,7 @@ jobs:
       - name: Build production assets
         run: npm run build
 
-      - name: Drop debug markers (version + pathcheck)
-        run: |
-          echo "Deployed $GITHUB_SHA on $(date -u +%FT%TZ)" > deploy/version.txt
-          cat > deploy/pathcheck.php <<'PHP'
-          <?php
-          echo 'ABSPATH: ' . ABSPATH . PHP_EOL;
-          echo 'Theme dir: ' . get_stylesheet_directory() . PHP_EOL;
-          PHP
-
-      - name: Write deploy version
-        run: echo "Deployed $GITHUB_SHA on $(date -u +%FT%TZ)" > version.txt
-
+      # create deploy/ first, then add debug markers *inside* it
       - name: Prepare deploy folder
         run: |
           rm -rf deploy
@@ -100,6 +89,12 @@ jobs:
             --exclude "vendor/bin" \
             --exclude "*.map" \
             ./ deploy/
+          echo "Deployed $GITHUB_SHA on $(date -u +%FT%TZ)" > deploy/version.txt
+          cat > deploy/pathcheck.php <<'PHP'
+          <?php
+          echo 'ABSPATH: ' . ABSPATH . PHP_EOL;
+          echo 'Theme dir: ' . get_stylesheet_directory() . PHP_EOL;
+          PHP
 
       - name: Deploy via SFTP (password)
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
